tests/baselines/reference/exportNamespace1.errors.txt
d.ts(2,5): error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.


==== a.ts (0 errors) ====
    export class A {}
    
==== b.ts (0 errors) ====
    export type { A } from './a';
    
==== c.ts (0 errors) ====
    export * from './b';
    
==== d.ts (1 errors) ====
    import { A } from './c';
    new A(); // Error
        ~
!!! error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 b.ts:1:15: 'A' was exported here.
    